--- a/geekshop/requirements.txt
+++ b/geekshop/requirements.txt
@@ -7,6 +7,7 @@ defusedxml==0.7.1
 Django==3.2.7
 django-debug-toolbar==3.2.2
 django-debug-toolbar-template-profiler==2.0.2
+django-extensions==3.1.3
 idna==3.3
 oauthlib==3.1.1
 Pillow==8.3.2
@@ -14,10 +15,12 @@ psycopg2-binary==2.9.1
 pycparser==2.20
 PyJWT==2.2.0
 python-dotenv==0.19.1
+python-memcached==1.59
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.26.0
 requests-oauthlib==1.3.0
+six==1.16.0
 social-auth-app-django==5.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.2
